--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!--Head-->
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +9,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Album example · Bootstrap v5.1</title>
+  <title>Code Review 4</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
 </head>
-
+<!--Body-->
 <body>
+  <!--Header-->
   <header>
     <div class="bg-black text-center p-3 text-white">
       <p class="h1">Movie Factory</p>
@@ -23,11 +24,14 @@
       <p class="h4 text-white">HOME</p>
     </div>
   </header>
+  <!--Main-->
   <main class="bg-dark">
     <div class="d-flex bd-highlight">
+      <!--Title-->
       <div class="p-5 w-100 bd-highlight text-center">
         <p class="h3 text-white">Movies</p>
       </div>
+      <!--Sort-->
       <div class="p-2 flex-shrink-1 bd-highlight">
         <nav class="nav-item dropdown">
           <a class="h4 nav-link dropdown-toggle text-white" data-bs-toggle="dropdown" href="#" role="button"
@@ -40,13 +44,15 @@
         </nav>
       </div>
     </div>
+    <!--Container with Movies-->
     <div class="container">
       <div id="filme" class="row justify-content-around row-cols row-cols-sm-2 row-cols-md-3 g-3">
-
+        <!--Here comes the Javascript Cards-->
       </div>
     </div>
     </div>
   </main>
+  <!--Footer-->
   <footer class="text-muted bg-black py-5">
     <div class="container">
       <p class="h2 text-center text-white">Movie Factory</p>
@@ -56,6 +62,7 @@
       </p>
     </div>
   </footer>
+  <!--Java Links-->
   <script type="text/javascript" src="java/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
