--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           <a class="h4 nav-link dropdown-toggle text-white" data-bs-toggle="dropdown" href="#" role="button"
             aria-expanded="false">Sort</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="index.html">by Likes</a></li>
-            <li><a class="dropdown-item" href="html/about.html">by Year</a></li>
-            <li><a class="dropdown-item" href="html/review.html">by Name</a></li>
+            <li id="sortlikes" class="dropdown-item">by Likes</li>
+            <li class="dropdown-item">by Year</li>
+            <li class="dropdown-item">by Name</li>
           </ul>
         </nav>
       </div>
