--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
             aria-expanded="false">Sort</a>
           <ul class="dropdown-menu">
             <li id="sortlikes" class="dropdown-item">by Likes</li>
-            <li class="dropdown-item">by Year</li>
-            <li class="dropdown-item">by Name</li>
+            <li id="sortyear" class="dropdown-item">by Year</li>
           </ul>
         </nav>
       </div>
