--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p class="h1">Movie Factory</p>
     </div>
     <div class="bg-secondary p-3">
-      <p class="h4 text-white">HOME</p>
+      <a class="h4 text-white" href="index.html">HOME</a>
     </div>
   </header>
   <!--Main-->
@@ -37,7 +37,6 @@
             aria-expanded="false">Sort</a>
           <ul class="dropdown-menu">
             <li id="sortlikes" class="dropdown-item">by Likes</li>
-            <li id="sortyear" class="dropdown-item">by Year</li>
           </ul>
         </nav>
       </div>
